[gd_scene load_steps=10 format=2]

[ext_resource path="res://Intro/Solider.gd" type="Script" id=1]
[ext_resource path="res://Assets/Solider.png" type="Texture" id=2]
[ext_resource path="res://Feedbacks/FeedbackSound.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Intro/Step.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 9, 15 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 9, 0, 9, 15 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 18, 0, 9, 15 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 27, 0, 9, 15 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[node name="Solider" type="AnimatedSprite"]
frames = SubResource( 5 )
animation = "Idle"
frame = 1
playing = true
script = ExtResource( 1 )

[node name="FeedbackSound" parent="." instance=ExtResource( 3 )]
audio_file = ExtResource( 4 )
random_pitch = true

[node name="TimerStep" type="Timer" parent="."]
wait_time = 0.2

[connection signal="walk_step" from="." to="FeedbackSound" method="perform"]
[connection signal="timeout" from="TimerStep" to="." method="_on_TimerStep_timeout"]
